Barman News - History of user-visible changes
Copyright (C) 2011-2013  2ndQuadrant Italia (Devise.IT S.r.l.)

Version 1.2.1 - X May 2013

* Added /etc/barman/barman.conf as default location

* Bug fix: avoid triggering the minimum_redundancy check
  on FAILED backups (thanks to Jérôme Vanandruel)

Version 1.2.0 - 31 Jan 2013

* Added the "retention_policy_mode" global/server option which defines
  the method for enforcing retention policies (currently only "auto")

* Added the "minimum_redundancy" global/server option which defines
  the minimum number of backups to be kept for a server

* Added the "retention_policy" global/server option which defines
  retention policies management based on redunancy (e.g. REDUNDANCY 4)
  or recovery window (e.g. RECOVERY WINDOW OF 3 MONTHS)

* Added retention policy support to the logging infrastructure, the
  "check" and the "status" commands

* The "check" command now integrates minimum redundancy control 

* Added retention policy states (valid, obsolete and potentially obsolete)
  to "show-backup" and "list-backup" commands

* The 'all' keyword is now forbidden as server name

* Added basic support for Nagios plugin output to the 'check'
  command through the --nagios option

* Barman now requires argh => 0.21.2 and argcomplete-

* Minor bug fixes

Version 1.1.2 - 29 Nov 2012

* Added "configuration_files_directory" option that allows
  to include multiple server configuration files from a directory

* Support for special backup IDs: latest, last, oldest, first

* Management of  multiple servers to the 'list-backup' command.
  'barman list-backup all' now list backups for all the configured servers.

* Added "application_name" management for PostgreSQL >= 9.0

* Fixed bug #18: ignore missing WAL files if not found during delete

Version 1.1.1 - 16 Oct 2012

* Fix regressions in recover command.

Version 1.1.0 - 12 Oct 2012

* Support for hook scripts to be executed before and after