@@ -233,12 +233,17 @@ Getting started
    the purpose of this tutorial there is no difference in using one or the
    other.
 
+   From version 1.2.1, you can use /etc/barman/barman.conf as default
+   system configuration file.
+
    The configuration file follows the standard INI format, and is split
    in:
      * a section for general configuration (identified by the barman
        label)
      * a section for each PostgreSQL server to be backed up (identified by
        the server label, e.g. main or pg)
+       [all and barman are reserved words and cannot be used as server
+       labels]
 
    As of version 1.1.2, you can now specify a directory for configuration
    files similarly to other Linux applications, using the
@@ -453,6 +458,14 @@ WAL compression
        following options as well:
           + custom_compression_filter: a compression filter
           + custom_decompression_filter: a decompression filter
+     __________________________________________________________________
+
+Limiting bandwidth usage
+
+   From version 1.2.1 it is possible to limit the usage of I/O bandwidth
+   through the bandwidth_limit option (global/per server), by specifying
+   the maximum number of kilobytes per second. By default it is set to 0,
+   meaning no limit.
      __________________________________________________________________
 
 Backup ID shortcuts
@@ -759,6 +772,7 @@ Hook scripts
      * BARMAN_PREVIOUS_ID: ID of the previous backup (if present)
      * BARMAN_SERVER: name of the server
      * BARMAN_STATUS: status of the backup
+     * BARMAN_VERSION: version of Barman (from 1.2.1)
 
    Important
    No check is performed on the exit code of the script. The result will
@@ -776,15 +790,18 @@ Support and sponsor opportunities
    For further information, please visit our websites:
      * Barman website: [6]http://www.pgbarman.org/
      * 2ndQuadrant website: [7]http://www.2ndquadrant.com/
+
+   Useful information can be found in the FAQ section of our website:
+   [8]http://www.pgbarman.org/faq/.
      __________________________________________________________________
 
 Authors
 
    In alphabetical order:
-     * Carlo Ascani <[8]carlo.ascani@2ndquadrant.it> (core team)
-     * Gabriele Bartolini <[9]gabriele.bartolini@2ndquadrant.it> (core
+     * Carlo Ascani <[9]carlo.ascani@2ndquadrant.it> (core team)
+     * Gabriele Bartolini <[10]gabriele.bartolini@2ndquadrant.it> (core
        team)
-     * Marco Nenciarini <[10]marco.nenciarini@2ndquadrant.it> (core team)
+     * Marco Nenciarini <[11]marco.nenciarini@2ndquadrant.it> (core team)
      __________________________________________________________________
 
 License and Contributions
@@ -792,9 +809,9 @@ License and Contributions
    Barman is the exclusive property of 2ndQuadrant Italia and its code is
    distributed under GNU General Public License 3.
    Copyright © 2011-2013, 2ndQuadrant Italia (Devise.IT S.r.l.) -
-   [11]http://www.2ndQuadrant.it.
+   [12]http://www.2ndQuadrant.it.
 
-   Barman has been partially funded through [12]4CaaSt, a research project
+   Barman has been partially funded through [13]4CaaSt, a research project
    funded by the European Commission's Seventh Framework programme.
 
    Contributions to Barman are welcome, and will be listed in the file
@@ -802,11 +819,11 @@ License and Contributions
    copyright assignment and a disclaimer of any work-for-hire ownership
    claims from the employer of the developer. This lets us make sure that
    all of the Barman distribution remains free code. Please contact
-   [13]info@2ndQuadrant.it for a copy of the relevant Copyright Assignment
+   [14]info@2ndQuadrant.it for a copy of the relevant Copyright Assignment
    Form.
      __________________________________________________________________
 
-   Last updated 2013-01-30 14:49:04 EST
+   Last updated 2013-04-26 15:23:06 CEST
 
 References
 
@@ -817,9 +834,10 @@ References
    5. http://www.postgresql.org/docs/current/static/client-authentication.html
    6. http://www.pgbarman.org/
    7. http://www.2ndquadrant.com/
-   8. mailto:carlo.ascani@2ndquadrant.it
-   9. mailto:gabriele.bartolini@2ndquadrant.it
-  10. mailto:marco.nenciarini@2ndquadrant.it
-  11. http://www.2ndQuadrant.it/
-  12. http://4caast.morfeo-project.org/
-  13. mailto:info@2ndQuadrant.it
+   8. http://www.pgbarman.org/faq/
+   9. mailto:carlo.ascani@2ndquadrant.it
+  10. mailto:gabriele.bartolini@2ndquadrant.it
+  11. mailto:marco.nenciarini@2ndquadrant.it
+  12. http://www.2ndQuadrant.it/
+  13. http://4caast.morfeo-project.org/
+  14. mailto:info@2ndQuadrant.it
