@@ -40,14 +40,14 @@ class Server(object):
         'compression', 'custom_compression_filter',
         'custom_decompression_filter', 'retention_policy_mode', 'retention_policy',
         'wal_retention_policy', 'pre_backup_script', 'post_backup_script',
-        'minimum_redundancy',
+        'minimum_redundancy', 'bandwidth_limit'
     ]
 
     BARMAN_KEYS = ['compression', 'custom_compression_filter',
         'custom_decompression_filter', 'retention_policy_mode', 'retention_policy',
         'wal_retention_policy', 'pre_backup_script', 'post_backup_script',
         'configuration_files_directory',
-        'minimum_redundancy',
+        'minimum_redundancy', 'bandwidth_limit'
     ]
 
     DEFAULTS = {
@@ -60,6 +60,7 @@ class Server(object):
         'retention_policy_mode' : 'auto',
         'wal_retention_policy' : 'main',
         'minimum_redundancy' : '0',
+        'bandwidth_limit' : '0',
     }
 
     def __init__(self, config, name):
